--- a/progress/03192018.md
+++ b/progress/03192018.md
@@ -4,3 +4,7 @@
 
 [ ] Read chapter 1 of C Programming Language and write Hello World Application in C
 [ ] Load Ubuntu onto Chromebook to use as testing device for writing in C
+
+## Completed
+
+✅  Hello World in C (Bonus, and C++!)
